--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -168,7 +168,8 @@
           "usernameDescription": "Вы можете изменить имя пользователя.",
           "modal": {
             "heading": "Изменение имени пользователя",
-            "description": "Изменять имя пользователя можно раз в 7 дней. Изменение вступает в силу немедленно и повлияет на то, как вас видят подписчики.",
+            "description": "Изменять имя пользователя можно раз в {cooldownDays} дней. Изменение вступает в силу немедленно и повлияет на то, как вас видят подписчики.",
+            "cooldownError": "Вы не можете изменить свое имя пользователя, так как уже вносили изменения в течение последних {cooldownDays} дней. Пожалуйста, попробуйте позже.",
             "cancelButton": "Отмена",
             "usernameUrlPreview": "Новый URL канала",
             "submitButton": "Обновить",
@@ -193,6 +194,7 @@
             "errorMessage": "Ошибка добавления ссылки на социальные сети"
           },
           "editForm": {
+            "heading": "Редактирование ссылки на социальные сети",
             "cancelButton": "Отмена",
             "submitButton": "Сохранить",
             "successUpdateMessage": "Ссылка на социальные сети успешно обновлена",
