--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -261,10 +261,10 @@
         },
         "deactivation": {
           "heading": "Деактивация аккаунта",
-          "description": "После деактивации вашего аккаунта вы не сможете войти в него. Ваш аккаунт будет полностью удален через 7 дней. До этого вы можете связаться с поддержкой, чтобы восстановить доступ и разблокировать ваш аккаунт.",
+          "description": "После деактивации вашего аккаунта вы не сможете войти в него. Ваш аккаунт будет полностью удален через {deletionDays} дней. До этого вы можете связаться с поддержкой, чтобы восстановить доступ и разблокировать ваш аккаунт.",
           "confirmModal": {
             "heading": "Подтверждение деактивации",
-            "message": "Вы уверены, что хотите деактивировать свой аккаунт? Доступ можно восстановить только в течение 7 дней."
+            "message": "Вы уверены, что хотите деактивировать свой аккаунт? Доступ можно восстановить только в течение {deletionDays} дней."
           },
           "button": "Деактивировать"
         }
@@ -520,6 +520,9 @@
   "components": {
     "liveBadge": {
       "text": "В ЭФИРЕ"
+    },
+    "toggleCard": {
+      "edit": "Изменить"
     },
     "confirmModal": {
       "cancel": "Отмена",
