--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -157,7 +157,7 @@
           "displayNameDescription": "Вы можете использовать заглавные буквы в отображаемом имени, как пожелаете.",
           "bioLabel": "Обо мне",
           "bioPlaceholder": "Я люблю программировать",
-          "bioDescription": "Информация о вас должна содержать не более 300 символов.",
+          "bioDescription": "Информация о вас должна содержать не более {maxLength} символов.",
           "successMessage": "Профиль успешно обновлен",
           "errorMessage": "Ошибка обновления профиля",
           "submitButton": "Сохранить изменения"
