--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -224,6 +224,11 @@
           "notVerified": "Не подтверждено",
           "verifiedText": "Спасибо за подтверждение вашей электронной почты.",
           "notVerifiedText": "Пожалуйста, подтвердите вашу электронную почту, чтобы избежать проблем.",
+          "sendVerificationToken": {
+            "resend": "Отправить код подтверждения",
+            "successMessage": "Код подтверждения отправлен",
+            "errorMessage": "Ошибка при отправке кода подтверждения"
+          },
           "successMessage": "Электронная почта успешно обновлена",
           "errorMessage": "Ошибка при обновлении электронной почты"
         },
