--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -229,7 +229,7 @@
             "successMessage": "Код подтверждения отправлен",
             "errorMessage": "Ошибка при отправке кода подтверждения"
           },
-          "successMessage": "Электронная почта успешно обновлена",
+          "successMessage": "Электронная почта успешно обновлена. Мы отправили вам письмо для подтверждения.",
           "errorMessage": "Ошибка при обновлении электронной почты"
         },
         "password": {
