--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -16,7 +16,7 @@
     },
     "verify": {
       "heading": "Подтверждение аккаунта",
-      "successMessage": "Ваш аккаунт был подтвержден. Теперь вы можете войти.",
+      "successMessage": "Ваш аккаунт был подтвержден.",
       "errorMessage": "Не удалось подтвердить аккаунт"
     },
     "login": {
@@ -218,19 +218,29 @@
         "email": {
           "heading": "Адрес электронной почты",
           "emailLabel": "Электронная почта",
-          "emailDescription": "Введите новый адрес электронной почты.",
+          "emailPlaceholder": "Ваша электронная почта",
+          "emailDescription": "Вы можете изменить свой адрес электронной почты.",
+          "pinLabel": "6-значный код",
+          "pinDescription": "Код был отправлен на вашу электронную почту.",
           "submitButton": "Сохранить",
           "verified": "Подтверждено",
           "notVerified": "Не подтверждено",
           "verifiedText": "Спасибо за подтверждение вашей электронной почты.",
           "notVerifiedText": "Пожалуйста, подтвердите вашу электронную почту, чтобы избежать проблем.",
+          "modal": {
+            "heading": "Изменение адреса электронной почты",
+            "description": "Обновление электронной почты можно выполнять раз в {cooldownDays} дней.",
+            "cooldownError": "Вы не можете изменить электронную почту, так как уже вносили изменения за последние {cooldownDays} дней. Пожалуйста, подождите, пока не закончится период ожидания.",
+            "cancelButton": "Отмена",
+            "submitButton": "Обновить",
+            "successMessage": "Электронная почта успешно обновлена.",
+            "errorMessage": "Ошибка при обновлении электронной почты."
+          },
           "sendVerificationToken": {
             "resend": "Отправить код подтверждения",
             "successMessage": "Код подтверждения отправлен",
             "errorMessage": "Ошибка при отправке кода подтверждения"
-          },
-          "successMessage": "Электронная почта успешно обновлена. Мы отправили вам письмо для подтверждения.",
-          "errorMessage": "Ошибка при обновлении электронной почты"
+          }
         },
         "password": {
           "heading": "Пароль аккаунта",
