feat: update no description text on about channel bio #51

--- a/apps/web/public/locales/en.json
+++ b/apps/web/public/locales/en.json
@@ -480,7 +480,7 @@
     "aboutChannel": {
       "heading": "About",
       "followersCount": "followers",
-      "noDescription": "Description not provided."
+      "noDescription": "We don't know much about them, but we're sure {displayName} is great."
     },
     "chat": {
       "heading": "Chat",
