feat: implement online user tracking with heartbeat and status updates

--- a/apps/web/public/locales/en.json
+++ b/apps/web/public/locales/en.json
@@ -460,7 +460,8 @@
     },
     "info": {
       "viewers": "viewers",
-      "offline": "Offline"
+      "offline": "Offline",
+      "online": "Online"
     },
     "actions": {
       "follow": {
