--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -462,7 +462,8 @@
     },
     "info": {
       "viewers": "зрителей",
-      "offline": "Не в сети"
+      "offline": "Не в сети",
+      "online": "В сети"
     },
     "actions": {
       "follow": {
