feat: update offline status message to show last seen time

--- a/apps/web/public/locales/en.json
+++ b/apps/web/public/locales/en.json
@@ -460,7 +460,7 @@
     },
     "info": {
       "viewers": "viewers",
-      "offline": "Offline",
+      "offline": "last seen {time}",
       "online": "Online"
     },
     "actions": {
