--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -259,7 +259,11 @@
           "newPasswordDescription": "Ваш новый пароль должен содержать не менее 8 символов. Рекомендуется использовать специальные символы для дополнительной безопасности.",
           "submitButton": "Сохранить",
           "successMessage": "Пароль успешно обновлен",
-          "errorMessage": "Ошибка при обновлении пароля"
+          "errorMessage": "Ошибка при обновлении пароля",
+          "newPasswordInfo": {
+            "heading": "Вы авторизовались через социальные сети",
+            "description": "Теперь вы можете установить пароль для вашего аккаунта."
+          }
         },
         "twoFactor": {
           "heading": "TOTP-аутентификация",
