feat(captcha): implement turnstile captcha on client for login, register and reset-password forms

--- a/apps/web/public/locales/en.json
+++ b/apps/web/public/locales/en.json
@@ -32,7 +32,8 @@
       "forgotPassword": "Forgot password?",
       "submitButton": "Log in",
       "successMessage": "You're now logged in",
-      "errorMessage": "Error logging in"
+      "errorMessage": "Error logging in",
+      "captchaWarning": "Please complete the CAPTCHA to log in"
     },
     "resetPassword": {
       "heading": "Reset your password",
