--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -13,7 +13,8 @@
       "successAlertTitle": "Аккаунт успешно создан",
       "successAlertDescription": "Мы отправили вам письмо для подтверждения аккаунта. Пожалуйста, проверьте ваш почтовый ящик.",
       "successMessage": "Аккаунт успешно создан",
-      "errorMessage": "Не удалось создать аккаунт"
+      "errorMessage": "Не удалось создать аккаунт",
+      "captchaWarning": "Пожалуйста, подтвердите, что вы не робот"
     },
     "verify": {
       "heading": "Подтверждение аккаунта",
@@ -32,7 +33,8 @@
       "forgotPassword": "Забыли пароль?",
       "submitButton": "Войти",
       "successMessage": "Вы успешно вошли в систему",
-      "errorMessage": "Ошибка при входе"
+      "errorMessage": "Ошибка при входе",
+      "captchaWarning": "Пожалуйста, подтвердите, что вы не робот"
     },
     "resetPassword": {
       "heading": "Сброс пароля",
@@ -42,7 +44,8 @@
       "submitButton": "Сбросить пароль",
       "successAlertTitle": "Ссылка для сброса пароля отправлена",
       "successAlertDescription": "Мы отправили вам письмо со ссылкой для сброса пароля. Пожалуйста, проверьте ваш почтовый ящик.",
-      "errorMessage": "Произошла ошибка при сбросе пароля"
+      "errorMessage": "Произошла ошибка при сбросе пароля",
+      "captchaWarning": "Пожалуйста, подтвердите, что вы не робот"
     },
     "newPassword": {
       "heading": "Установите новый пароль",
