feat(settings): add search params to persist current open tab

--- a/apps/web/public/locales/en.json
+++ b/apps/web/public/locales/en.json
@@ -137,7 +137,7 @@
         "heading": "Settings",
         "description": "Here you can manage your settings",
         "profile": "Profile",
-        "account": "Account",
+        "security": "Security",
         "appearance": "Appearance",
         "notifications": "Notifications",
         "sessions": "Sessions"
