--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -139,7 +139,7 @@
         "heading": "Настройки",
         "description": "Здесь вы можете управлять своими настройками",
         "profile": "Профиль",
-        "account": "Аккаунт",
+        "security": "Безопасность",
         "appearance": "Внешний вид",
         "notifications": "Уведомления",
         "sessions": "Сессии"
