--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -347,6 +347,13 @@
           "active": "Активные сессии",
           "notFound": "Активные сессии не найдены"
         },
+        "removeOtherSessions": {
+          "heading": "Выйти отовсюду",
+          "message": "Это приведет к выходу из Elcast везде, где вы авторизованы, включая сторонние приложения. Если вы считаете, что ваша учетная запись была взломана, мы рекомендуем вам сменить пароль.",
+          "button": "Выйти отовсюду",
+          "successMessage": "Все остальные сессии были успешно завершены",
+          "errorMessage": "Ошибка при выходе из других сессий"
+        },
         "sessionItem": {
           "deleteButton": "Удалить",
           "detailsButton": "Детали",
