--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -16,10 +16,20 @@
       "errorMessage": "Не удалось создать аккаунт",
       "captchaWarning": "Пожалуйста, подтвердите, что вы не робот"
     },
-    "verify": {
-      "heading": "Подтверждение аккаунта",
-      "successMessage": "Ваш аккаунт был подтвержден.",
-      "errorMessage": "Не удалось подтвердить аккаунт"
+    "verifyLink": {
+      "heading": "Подтверждение почты",
+      "successMessage": "Ваша почта была подтверждена.",
+      "errorMessage": "Не удалось подтвердить почту"
+    },
+    "verifyCode": {
+      "heading": "Подтвердите свой адрес электронной почты",
+      "subtitle": "чтобы продолжить использовать Elcast",
+      "codeLabel": "Код подтверждения",
+      "codeDescription": "Введите код подтверждения, отправленный на ваш адрес электронной почты",
+      "submitButton": "Подтвердить",
+      "successMessage": "Ваша почта была подтверждена.",
+      "errorMessage": "Не удалось подтвердить почту",
+      "resend": "Не получили код? Отправить снова"
     },
     "login": {
       "heading": "Добро пожаловать",
