--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -311,6 +311,13 @@
           "button": "Деактивировать"
         }
       },
+      "connections": {
+        "header": {
+          "heading": "Подключения",
+          "description": "Привяжите свои аккаунты, чтобы упростить процесс входа. Подключите сервисы для удобного доступа к вашему аккаунту."
+        },
+        "connected": "Ваш аккаунт {service} подключен"
+      },
       "appearance": {
         "header": {
           "heading": "Внешний вид",
