--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -316,7 +316,10 @@
           "heading": "Подключения",
           "description": "Привяжите свои аккаунты, чтобы упростить процесс входа. Подключите сервисы для удобного доступа к вашему аккаунту."
         },
-        "connected": "Ваш аккаунт {service} подключен"
+        "connect": "Подключить",
+        "disconnect": "Отключить",
+        "connected": "Ваш аккаунт {service} подключен",
+        "notConnected": "Ваш аккаунт {service} не подключен"
       },
       "appearance": {
         "header": {
