feat(oauth): update assign and create account logic after oauth

--- a/apps/web/public/locales/en.json
+++ b/apps/web/public/locales/en.json
@@ -107,6 +107,7 @@
           "language": "Language",
           "darkTheme": "Dark theme",
           "keys": "Stream Keys",
+          "connections": "Connections",
           "chatSettings": "Chat Settings",
           "followers": "Followers",
           "logout": "Sign out"
