--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -107,6 +107,7 @@
           "channel": "Мой канал",
           "settings": "Настройки",
           "keys": "Ключи стрима",
+          "connections": "Подключения",
           "chatSettings": "Настройки чата",
           "followers": "Подписчики",
           "language": "Язык",
