feat(search): implement mobile search command dialog

--- a/apps/web/public/locales/en.json
+++ b/apps/web/public/locales/en.json
@@ -103,6 +103,8 @@
           "successMessage": "Successfully logged out",
           "errorMessage": "Logout error",
           "channel": "My channel",
+          "categories": "Categories",
+          "streams": "Streams",
           "settings": "Settings",
           "language": "Language",
           "darkTheme": "Dark theme",
