--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -105,6 +105,8 @@
           "successMessage": "Успешный выход из системы",
           "errorMessage": "Ошибка выхода из системы",
           "channel": "Мой канал",
+          "categories": "Категории",
+          "streams": "Стримы",
           "settings": "Настройки",
           "keys": "Ключи стрима",
           "connections": "Подключения",
