--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -114,6 +114,7 @@
           "followers": "Подписчики",
           "language": "Язык",
           "darkTheme": "Темная тема",
+          "login": "Войти",
           "logout": "Выйти"
         }
       },
