--- a/apps/web/public/locales/en.json
+++ b/apps/web/public/locales/en.json
@@ -112,6 +112,7 @@
           "connections": "Connections",
           "chatSettings": "Chat Settings",
           "followers": "Followers",
+          "status": "Status",
           "login": "Sign in",
           "logout": "Sign out"
         }
