feat(ui): update emoji picker and some chat ui updates

--- a/apps/web/public/locales/en.json
+++ b/apps/web/public/locales/en.json
@@ -544,6 +544,7 @@
         "followersOnly": "For followers only"
       },
       "sendMessage": {
+        "sendButton": "Chat",
         "placeholder": "Send a message",
         "emojiPlaceholder": "Search",
         "errorMessage": "Error while sending message."
