--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -548,6 +548,7 @@
         "followersOnly": "Только для фолловеров"
       },
       "sendMessage": {
+        "sendButton": "Чат",
         "placeholder": "Отправить сообщение",
         "emojiPlaceholder": "Поиск",
         "errorMessage": "Ошибка при отправке сообщения."
